Melhorando a estrutura html e o visual das teclas.

--- a/index.html
+++ b/index.html
@@ -13,44 +13,50 @@
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body>
-<section class="teclado">
-  <ul  class="teclas">
-    <li><button>7</button></li>
-    <li><button>8</button></li>
-    <li><button>9</button></li>
-    <li><button>dell</button></li>
-    <li><button>4</button></li>
-    <li><button>5</button></li>
-    <li><button>6</button></li>
-    <li><button>+</button></li>
-    <li><button>1</button></li>
-    <li><button>2</button></li>
-    <li><button>3</button></li>
-    <li><button>-</button></li>
-    <li><button>.</button></li>
-    <li><button>0</button></li>
-    <li><button>/</button></li>
-    <li><button>x</button></li>
-    <li><button class="reset">reset</button></li>
-    <li><button class="igualdade">=</button></li>
-  </ul>
-</section>
+  <header>
+  
+  </header>
+  <main>
     <section class="header">
       <div>
         <h1>Calc</h1>
-        <div>
-          <label for="">theme</label>
-          
-        </div>
-      </div>
-      
+          <div>
+            <label for="">theme</label>        
+          </div>
+      </div>      
       <input class="result" type="text">
     </section>
+    <section class="teclado">
+      <div class="container">
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ellielton and lukas</a>.
-  </div>
+        <ul  class="teclas">
+          <li><button class="tecla">7</button></li>
+          <li><button class="tecla">8</button></li>
+          <li><button class="tecla">9</button></li>
+          <li><button class="tecla">dell</button></li>
+          <li><button class="tecla">4</button></li>
+          <li><button class="tecla">5</button></li>
+          <li><button class="tecla">6</button></li>
+          <li><button class="tecla">+</button></li>
+          <li><button class="tecla">1</button></li>
+          <li><button class="tecla">2</button></li>
+          <li><button class="tecla">3</button></li>
+          <li><button class="tecla">-</button></li>
+          <li><button class="tecla">.</button></li>
+          <li><button class="tecla">0</button></li>
+          <li><button class="tecla">/</button></li>
+          <li><button class="tecla">x</button></li>
+          <li><button class="tecla">reset</button></li>
+          <li><button class="tecla">=</button></li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Ellielton and lukas</a>.
+      </div>
+  </footer>
 </body>
 </html>
