modific css styles from src files

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/teclas.css">
   
-  <link rel="stylesheet" href="src/style.css">
-  <link rel="stylesheet" href="src/styles/colors.css">
+  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="src/css/colors.css">
+  <link rel="stylesheet" href="src/css/teclas.css">
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body>
