Add grid style buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><button class="tecla">7</button></li>
           <li><button class="tecla">8</button></li>
           <li><button class="tecla">9</button></li>
-          <li><button class="tecla">dell</button></li>
+          <li class=" del"><button class="tecla">dell</button></li>
           <li><button class="tecla">4</button></li>
           <li><button class="tecla">5</button></li>
           <li><button class="tecla">6</button></li>
@@ -46,8 +46,8 @@
           <li><button class="tecla">0</button></li>
           <li><button class="tecla">/</button></li>
           <li><button class="tecla">x</button></li>
-          <li><button class="tecla">reset</button></li>
-          <li><button class="tecla">=</button></li>
+          <li class="reset"><button class="tecla ">reset</button></li>
+          <li class="result"><button class="tecla ">=</button></li>
         </ul>
       </div>
     </section>
