Melorando a semântica do section display.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body class="theme">
-  <header>
-      
-  </header>
   <main>
-    <section class="header">
+    <section class="display">
       <div>
         <h1>Calc</h1>
           <div>
