Criei novos seletores para os botões no aquivo index, Crie novos arquivos js com as quatro operações e que vai exibir o numeros no display

--- a/index.html
+++ b/index.html
@@ -30,28 +30,42 @@
     <section class="teclado">
       <div class="container">
         <ul  class="teclas">
-          <li><button class="tecla">7</button></li>
-          <li><button class="tecla">8</button></li>
-          <li><button class="tecla">9</button></li>
-          <li class=" del"><button class="tecla">dell</button></li>
-          <li><button class="tecla">4</button></li>
-          <li><button class="tecla">5</button></li>
-          <li><button class="tecla">6</button></li>
-          <li><button class="tecla">+</button></li>
-          <li><button class="tecla">1</button></li>
-          <li><button class="tecla">2</button></li>
-          <li><button class="tecla">3</button></li>
-          <li><button class="tecla">-</button></li>
-          <li><button class="tecla">.</button></li>
-          <li><button class="tecla">0</button></li>
-          <li><button class="tecla">/</button></li>
-          <li><button class="tecla">x</button></li>
-          <li class="reset"><button class="tecla ">reset</button></li>
-          <li class="result"><button class="tecla ">=</button></li>
+          <li><button class="tecla" id="numeroSete" value="7">7</button></li>
+          <li><button class="tecla" id="numeroOito" value="8">8</button></li>
+          <li><button class="tecla" id="numeroNove" value="9">9</button></li>
+
+          <li class=" del"><button class="tecla" id="btnDeletar" value="deletar">dell</button></li>
+          
+          <li><button class="tecla" id="numeroQuatro" value="4">4</button></li>
+          <li><button class="tecla" id="numeroCinco" value="5">5</button></li>
+          <li><button class="tecla" id="numeroSeis" value="6">6</button></li>
+
+          <li><button class="tecla" id="btnSomar" value="somar">+</button></li>
+
+          <li><button class="tecla" id="numeroUm" value="1">1</button></li>
+          <li><button class="tecla" id="numeroDois" value="2">2</button></li>
+          <li><button class="tecla" id="numeroTres" value="3">3</button></li>
+
+          <li><button class="tecla" id="btnSubtrair" value="subtrair">-</button></li>
+
+          <li><button class="tecla" id="btnPonto" value="ponto">.</button></li>
+
+          <li><button class="tecla" id="numeroZero" value="0">0</button></li>
+
+          <li><button class="tecla" id="btnDivisor" value="Dividir">/</button></li>
+          <li><button class="tecla" id="btnMultiplicador" value="multiplicar">x</button></li>
+
+          <li class="reset"><button class="tecla" id="btnReset" value="reset">reset</button></li>
+          <li class="result"><button class="tecla" id="btnIgual" value="igual">=</button></li>
         </ul>
       </div>
     </section>
   </main>
+  <script src="src/js/main.js"></script>
+  <script src="src/js/operaçoes.js"></script>
+    <script src="src/js/operaçoes.js"></script>
+
+
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
