refatorando html/css teclado

--- a/index.html
+++ b/index.html
@@ -31,26 +31,24 @@
     </section>
     <section class="teclado">
       <div class="container">
-        <ul  class="teclas">
-          <li><button class="tecla">7</button></li>
-          <li><button class="tecla">8</button></li>
-          <li><button class="tecla">9</button></li>
-          <li class=" del"><button class="tecla">del</button></li>
-          <li><button class="tecla">4</button></li>
-          <li><button class="tecla">5</button></li>
-          <li><button class="tecla">6</button></li>
-          <li><button class="tecla">+</button></li>
-          <li><button class="tecla">1</button></li>
-          <li><button class="tecla">2</button></li>
-          <li><button class="tecla">3</button></li>
-          <li><button class="tecla">-</button></li>
-          <li><button class="tecla">.</button></li>
-          <li><button class="tecla">0</button></li>
-          <li><button class="tecla">/</button></li>
-          <li><button class="tecla">x</button></li>
-          <li class="reset"><button class="tecla ">reset</button></li>
-          <li class="result"><button class="tecla ">=</button></li>
-        </ul>
+        <button class="teclas">7</button>
+        <button class="teclas">8</button>
+        <button class="teclas">9</button>
+        <button class="del teclas">del</button>
+        <button class="teclas">4</button>
+        <button class="teclas">5</button>
+        <button class="teclas">6</button>
+        <button class="teclas">+</button>
+        <button class="teclas">1</button>
+        <button class="teclas">2</button>
+        <button class="teclas">3</button>
+        <button class="teclas">-</button>
+        <button class="teclas">.</button>
+        <button class="teclas">0</button>
+        <button class="teclas">/</button>
+        <button class="teclas">x</button> 
+        <button class="teclas reset">reset</button>
+        <button class="teclas result ">=</button>
       </div>
     </section>
   </main>
